# trio

./: .env.example  .gitignore  BUGS.md  CHANGELOG.md  CHAT_UI_V1_LEARNINGS.md  CHAT_UI_V2_SPEC.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  litellm-config.yaml  logo.html  pyproject.toml  trio_models.yml
.github/workflows/: ci.yml  release.yml
e2e/: chat-v2.spec.ts  chat.spec.ts  edge-cases.spec.ts  explore.spec.ts  package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.ts  styles.css  types.ts
frontend/src/components/: AggregationMethodSelect.tsx  ChatHeader.tsx  ChatPanel.tsx  ChatWindow.ts  DebugPanel.tsx  EnsembleConfig.tsx  EnsembleMemberList.tsx  EnsembleMemberRow.tsx  ErrorBanner.tsx  MessageBubble.tsx  MessageInput.ts  MessageInput.tsx  MessageList.tsx  ModeToggle.tsx  ModelConfig.ts  ModelConfigPanel.tsx  TrioConfig.tsx  TrioDetailsPanel.tsx  TrioMemberList.tsx  TrioMemberRow.tsx  ValidationError.tsx  VotingDetails.ts  VotingDetailsPanel.tsx
frontend/src/schemas/: request.ts
frontend/src/services/: api.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
src/: __init__.py  aggregation.py  config.py  llm.py  main.py  models.py  trio_engine.py  voting.py
tests/: __init__.py  test_aggregation.py  test_api.py  test_trio.py  test_voting.py
